[gd_scene load_steps=15 format=3 uid="uid://do805g4atrlt1"]

[ext_resource type="Texture2D" uid="uid://bw6gsxhw0w10j" path="res://Cloud_02.png" id="1_xsv7h"]
[ext_resource type="Script" path="res://intro_scene.gd" id="1_yo85q"]
[ext_resource type="FontFile" uid="uid://bfpopxhv6prlu" path="res://Transformers Movie.ttf" id="2_jn2nw"]

[sub_resource type="Animation" id="Animation_pjlr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_tfdk6"]
resource_name = "new_animation"
length = 20.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ak8h3"]
_data = {
"RESET": SubResource("Animation_pjlr4"),
"new_animation": SubResource("Animation_tfdk6")
}

[sub_resource type="Animation" id="Animation_vaj1t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_5ljn0"]
resource_name = "new_animation"
length = 10.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label2:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6cfg"]
_data = {
"RESET": SubResource("Animation_vaj1t"),
"new_animation": SubResource("Animation_5ljn0")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6fhav"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e5ct7"]

[sub_resource type="Animation" id="Animation_rf27g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_je1b7"]
resource_name = "new_animation"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_atafy"]
_data = {
"RESET": SubResource("Animation_rf27g"),
"new_animation": SubResource("Animation_je1b7")
}

[node name="Intro Scene" type="Node2D"]
position = Vector2(120, 72)
scale = Vector2(0.8, 0.8)
script = ExtResource("1_yo85q")

[node name="Cloud02" type="Sprite2D" parent="."]
position = Vector2(571, 347)
scale = Vector2(1.285, 1.285)
texture = ExtResource("1_xsv7h")

[node name="Storylore" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ak8h3")
}
speed_scale = 2.0

[node name="Label" type="Label" parent="."]
offset_left = 157.0
offset_top = 100.0
offset_right = 1000.0
offset_bottom = 540.0
theme_override_fonts/font = ExtResource("2_jn2nw")
theme_override_font_sizes/font_size = 26
text = "In the year 2269, Earth is no more. The endless greed of humanity led to a catastrophic nuclear war, reducing our home to a lifeless wasteland. But the destruction didn’t stop there. Decades of reckless space expansion, defunct satellites, and weaponized asteroids have turned the cosmos into a graveyard of humanity’s past mistakes.

You are the last survivor, drifting through the void in a desperate search for a new home. But there is none. Every habitable world has been scarred by human intervention—poisoned atmospheres, shattered moons, and civilizations that never had a chance.

Now, your mission is simple: survive. Navigate the endless wreckage of a dying era, evade rogue machines and asteroid storms, and push forward through light-years of uncertainty. Somewhere beyond the galaxies, beyond the reach of our past sins, maybe—just maybe—hope still exists."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 157.0
offset_top = 100.0
offset_right = 1000.0
offset_bottom = 540.0
theme_override_fonts/font = ExtResource("2_jn2nw")
theme_override_font_sizes/font_size = 26
text = "The spaceship you pilot is the last of its kind, a relic from a time when humanity dreamed of luxury space travel. Once built for extravagant interstellar vacations, it now serves a far grimmer purpose—your only hope for survival.  

With every 500 light-years you traverse, the ship evolves, adapting its shape, speed, and travel efficiency to withstand the growing dangers of deep space. Using the Boost will grant you a leap towards extra Light Years but be careful of the Asteroid and Space Debris. What was once a vessel of leisure is now your lifeline in an endless, perilous journey beyond the wreckage of humanity’s past.

Good Luck Human !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Spaceshipinfo" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e6cfg")
}
speed_scale = 2.0

[node name="First Anim" type="Button" parent="."]
visible = false
offset_left = -277.5
offset_top = -172.5
offset_right = 877.5
offset_bottom = 472.5
scale = Vector2(1.5, 1.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_6fhav")
flat = true

[node name="Second Anim" type="Button" parent="."]
visible = false
offset_left = -277.5
offset_top = -172.5
offset_right = 877.5
offset_bottom = 472.5
scale = Vector2(1.5, 1.5)
theme_override_styles/focus = SubResource("StyleBoxEmpty_e5ct7")
flat = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -471.25
offset_top = -282.5
offset_right = 1653.75
offset_bottom = 947.5
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_atafy")
}
autoplay = "new_animation"

[connection signal="animation_finished" from="Storylore" to="." method="_on_storylore_animation_finished"]
[connection signal="animation_finished" from="Spaceshipinfo" to="." method="_on_spaceshipinfo_animation_finished"]
[connection signal="pressed" from="First Anim" to="." method="_on_first_anim_pressed"]
[connection signal="pressed" from="Second Anim" to="." method="_on_second_anim_pressed"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
